--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ django-cors-headers==3.7.0
 django-mysql==3.12.0
 djangorestframework==3.12.4
 mysqlclient==2.0.3
+PyJWT==2.1.0
 pytz==2021.1
 sqlparse==0.4.1
