--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,7 @@ services:
       - 8000:8000
   #   depends_on:
   #     - db
+  #     - redis
 
   # db:
   #   image: mysql:5.7.22
@@ -19,3 +20,8 @@ services:
   #     MYSQL_ROOT_PASSWORD: root
   #   volumes:
   #     - .dbdata:/var/lib/mysql
+
+  # redis:
+  #   image: redis
+  #   ports:
+  #     - 6379:6379
